objects/Intranet_Constants__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Constants and Settings used by Intranet pages</description>
    <fields>
        <fullName>Allow_Importance_L1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Schedule Importance field to be set to L1</description>
        <inlineHelpText>Allow Schedule Importance field to be set to L1</inlineHelpText>
        <label>Allow Importance L1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Schedule_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Schedule Approval Status to be set to &apos;Approved&apos; or &apos;Rejected&apos;</description>
        <inlineHelpText>Allow Schedule Approval Status to be set to &apos;Approved&apos; or &apos;Rejected&apos;</inlineHelpText>
        <label>Allow Schedule Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ErrorMessage_SearchResults_Empty__c</fullName>
        <description>No results found for search criteria.</description>
        <label>ErrorMessage_SearchResults_Empty</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage_SearchResults_Max__c</fullName>
        <description>More than 2,000+ results returned.  Refine your search criteria for more accurate results.</description>
        <label>ErrorMessage_SearchResults_Max</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Birthday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to exclude Salesforce user from Birthdays tab in Intranet</inlineHelpText>
        <label>Exclude Birthday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon_Style__c</fullName>
        <description>Font Awesome icon list - http://fortawesome.github.io/Font-Awesome/icons/</description>
        <inlineHelpText>Default icon style for links that require an icon.</inlineHelpText>
        <label>Icon Style</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Intranet_Constants</label>
</CustomObject>